crates/control-plane-api/src/server/public/graphql/test/queries/snapshots/agent__integration_tests__graphql__queries__bob-live_specs_collection_connections_forward.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: bob_result
---
{
  "liveSpecs": {
    "edges": [
      {
        "node": {
          "catalogName": "aliceCo/shared/a",
          "liveSpec": {
            "readBy": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/materialize",
                  "node": {
                    "catalogName": "aliceCo/shared/materialize",
                    "userCapability": "read"
                  }
                },
                {
                  "cursor": "bobCo/private/materialization",
                  "node": {
                    "catalogName": "bobCo/private/materialization",
                    "userCapability": "admin"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false,
                "hasPreviousPage": false
              }
            },
            "writtenBy": {
              "edges": [
                {
                  "cursor": "aliceCo/shared/capture",
                  "node": {
                    "catalogName": "aliceCo/shared/capture",
                    "userCapability": "read"
                  }
                }
              ],
              "pageInfo": {
                "hasNextPage": false,
                "hasPreviousPage": false
              }
            }
          },
          "userCapability": "read"
        }
      }
    ]
  }
}
