crates/control-plane-api/src/server/public/graphql/test/queries/snapshots/agent__integration_tests__graphql__queries__bob-live_specs_missing_name_and_prefix.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: bob_result
---
"GraphQL query failed with error: GraphQL errors: [ServerError { message: \"must provide at least one of `names` or `prefix`\", locations: [Pos(2:5)], path: [Field(\"liveSpecs\")], extensions: None }]"
