crates/control-plane-api/src/server/public/graphql/test/queries/snapshots/agent__integration_tests__graphql__queries__bob-live_specs_pagination_cursor.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: bob_result
---
{
  "liveSpecs": {
    "edges": [
      {
        "cursor": "aliceCo/shared/b",
        "node": {
          "catalogName": "aliceCo/shared/b",
          "userCapability": "read"
        }
      },
      {
        "cursor": "aliceCo/shared/c",
        "node": {
          "catalogName": "aliceCo/shared/c",
          "userCapability": "read"
        }
      }
    ],
    "pageInfo": {
      "hasNextPage": true,
      "hasPreviousPage": true
    }
  }
}
