crates/control-plane-api/src/server/public/graphql/test/queries/snapshots/agent__integration_tests__graphql__queries__bob-live_specs_pagination_cursor_beyond_end.snap
---
source: crates/agent/src/integration_tests/graphql/queries/mod.rs
expression: bob_result
---
{
  "liveSpecs": {
    "edges": [],
    "pageInfo": {
      "hasNextPage": false,
      "hasPreviousPage": true
    }
  }
}
